# VeilY

./: .env  .gitignore  DB.sql  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
api/: create-checkout-session.ts  generate.ts  track-usage.ts  webhook.ts
electron/: main.js  preload.js
src/: App.tsx  electron.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ChatPreview.tsx  CommentsPreview.tsx  CommentsSidebar.tsx  EmailPreview.tsx  EmailSidebar.tsx  GroupCallPreview.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  PlatformSelector.tsx  PreviewControls.tsx  Sidebar.tsx  SocialPostPreview.tsx  SocialPostSidebar.tsx  StoriesPreview.tsx  StoriesSidebar.tsx  Watermark.tsx
src/contexts/: AuthContext.tsx
src/hooks/: scenarios.ts  useChatState.ts  useChatState_head.txt  useChatState_tail.txt  useCommentState.ts  useEmailState.ts  useGroupCallState.ts  useKeyboardShortcuts.ts  useOfflineDetection.ts  useScreenshot.ts  useSocialPostState.ts  useStoriesState.ts  useUpdateChecker.ts
src/lib/: ai-utils.ts  avatar-utils.ts  electron-utils.ts  export-utils.ts  image-utils.ts  parsers.ts  supabase.ts  templates.ts  utils.ts
src/pages/: AIChat.tsx  Auth.tsx  Comments.tsx  Email.tsx  GroupCall.tsx  Index.tsx  Landing.tsx  SocialPost.tsx  Stories.tsx  UpgradeSuccess.tsx
src/types/: chat.ts
supabase/: config.toml
supabase/templates/: change_email.html  confirm_signup.html  (+2 more)
tmp/: test_regex.js
(+42 files in other folders)
